# discord_genai_bot

./: .gitignore  README.md  discord_bot.py  main.py  pyproject.toml  requirements.txt  start_vllm.ps1  test_bot_owner.py
image_cap_flow/: discord_img_llm.py  test_img.py
rag_system/: __init__.py  config.py  data_models.py  document_processor.py  document_storage.py  llama_integration.py  query_engine.py  rag_system.py
tests/: test_document_processor.py  test_llm_backends_openrouter.py
