[project]
name = "discord-genai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.4",
    "llama-index>=0.14.8",
    "llama-index-llms-openai>=0.6.10",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-embeddings-openai>=0.3.0",
    "python-dotenv>=1.2.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
